Started On Character Selection Scene

--- a/Src/Client/Assembly-CSharp.csproj
+++ b/Src/Client/Assembly-CSharp.csproj
@@ -56,14 +56,19 @@
      <Compile Include="Assets\Scripts\Assets\Resloader.cs" />
      <Compile Include="Assets\Scripts\LoadingManager.cs" />
      <Compile Include="Assets\Scripts\Log\UnityLogger.cs" />
+     <Compile Include="Assets\Scripts\Managers\DataManager.cs" />
      <Compile Include="Assets\Scripts\Models\User.cs" />
      <Compile Include="Assets\Scripts\Network\NetClient.cs" />
      <Compile Include="Assets\Scripts\Scene\SceneManager.cs" />
      <Compile Include="Assets\Scripts\Services\UserService.cs" />
      <Compile Include="Assets\Scripts\UI\MessageBox.cs" />
+     <Compile Include="Assets\Scripts\UI\UICharacterCreateView.cs" />
+     <Compile Include="Assets\Scripts\UI\UICharacterSelectionView.cs" />
+     <Compile Include="Assets\Scripts\UI\UICharacterView.cs" />
      <Compile Include="Assets\Scripts\UI\UILoginPage.cs" />
      <Compile Include="Assets\Scripts\UI\UIMessageBox.cs" />
      <Compile Include="Assets\Scripts\UI\UIRegisterPage.cs" />
+     <Compile Include="Assets\Scripts\UI\UIUserCharacterEntry.cs" />
      <Compile Include="Assets\Scripts\Utilities\CustomUtilities.cs" />
      <Compile Include="Assets\Scripts\Utilities\GameUtil.cs" />
      <Compile Include="Assets\Scripts\Utilities\MonoSingleton.cs" />
