--- a/Src/Client/Assembly-CSharp.csproj
+++ b/Src/Client/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\Scripts\GameObject\GameObjectManager.cs" />
     <Compile Include="Assets\Scripts\GameObject\GameObjectTool.cs" />
     <Compile Include="Assets\Scripts\GameObject\MainPlayerCamera.cs" />
+    <Compile Include="Assets\Scripts\GameObject\MapController.cs" />
     <Compile Include="Assets\Scripts\GameObject\PlayerInputController.cs" />
     <Compile Include="Assets\Scripts\GameObject\TeleportObject.cs" />
     <Compile Include="Assets\Scripts\Log\UnityLogger.cs" />
@@ -80,7 +81,6 @@
     <Compile Include="Assets\Scripts\Managers\EntityManager.cs" />
     <Compile Include="Assets\Scripts\Managers\LoadingManager.cs" />
     <Compile Include="Assets\Scripts\Managers\ManagerSpawner.cs" />
-    <Compile Include="Assets\Scripts\Managers\MiniMapManager.cs" />
     <Compile Include="Assets\Scripts\Models\User.cs" />
     <Compile Include="Assets\Scripts\Network\NetClient.cs" />
     <Compile Include="Assets\Scripts\Scene\SceneManager.cs" />
@@ -88,15 +88,18 @@
     <Compile Include="Assets\Scripts\Services\UserService.cs" />
     <Compile Include="Assets\Scripts\UI\CharacterSelection\UICharacterCreateView.cs" />
     <Compile Include="Assets\Scripts\UI\CharacterSelection\UICharacterSelectionView.cs" />
+    <Compile Include="Assets\Scripts\UI\CharacterSelection\UICharacterView.cs" />
     <Compile Include="Assets\Scripts\UI\CharacterSelection\UIUserCharacterEntry.cs" />
     <Compile Include="Assets\Scripts\UI\CharacterSelection\UIUserCharacterView.cs" />
     <Compile Include="Assets\Scripts\UI\Login\UILoginPage.cs" />
     <Compile Include="Assets\Scripts\UI\Login\UIRegisterPage.cs" />
     <Compile Include="Assets\Scripts\UI\MessageBox.cs" />
+    <Compile Include="Assets\Scripts\UI\MiniMap\MiniMapManager.cs" />
     <Compile Include="Assets\Scripts\UI\MiniMap\UIMiniMap.cs" />
-    <Compile Include="Assets\Scripts\UI\UICharacterView.cs" />
-    <Compile Include="Assets\Scripts\UI\UIMainCity.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain.cs" />
+    <Compile Include="Assets\Scripts\UI\UIManager.cs" />
     <Compile Include="Assets\Scripts\UI\UIMessageBox.cs" />
+    <Compile Include="Assets\Scripts\UI\UIWindow.cs" />
     <Compile Include="Assets\Scripts\UI\UIWorld\UINameBar.cs" />
     <Compile Include="Assets\Scripts\UI\UIWorld\UIWorldElement.cs" />
     <Compile Include="Assets\Scripts\UI\UIWorld\UIWorldElementManager.cs" />
